<resources>
    <string name="app_name">Semear</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_search">Pesquisar</string>

    <string name="all_rooms">Todas as Salas</string>
    <string name="n1">N1</string>
    <string name="n2">N2</string>
    <string name="n3">N3</string>
    <string name="n4">N4</string>
    <string name="n5">N5</string>

    <string name="all_chalets">Todos os Chalés</string>
    <string name="chalet3">Chalé 3</string>
    <string name="chalet4">Chalé 4</string>
    <string name="chalet5">Chalé 5</string>
    <string name="chalet6">Chalé 6</string>
    <string name="chalet7">Chalé 7</string>
    <string name="chalet8">Chalé 8</string>
    <string name="chalet9">Chalé 9</string>
    <string name="chalet10">Chalé 10</string>

    <string name="class_dates">Datas</string>
    <string name="infos">Informações</string>
    <string name="reports">Relatórios</string>
    <string name="menu_refresh">Atualizar</string>
    <string name="about">Sobre</string>
    <string name="image_description_kid_icon">Criança</string>
    <string name="image_description_arrow_icon">Registro</string>
    <string name="no_kids">Nenhuma criança foi adicionada ainda.</string>
    <string name="kid_added">Registro adicionado.</string>
    <string name="kid_updated">Registro atualizado.</string>
    <string name="kid_deleted">Registro removido.</string>

    <!-- Strings related to start -->
    <string name="babies">Semear Bebês</string>
    <string name="ebi_ci">EBI/CI</string>
    <string name="management">Gestão</string>

    <!-- Strings related to management -->
    <string name="from">De:</string>
    <string name="to">Até:</string>
    <string name="birth">Nascimento:</string>
    <string name="room">Sala:</string>
    <string name="chalet">Chalé:</string>
    <string name="seed_baby">Semear Bebês</string>
    <string name="seed_kid">Crianças de 4 a 11 anos</string>
    <string name="save">Salvar</string>

    <!-- Strings related to comment -->
    <string name="comment">Comentário</string>
    <string name="comment_added">Comentário adicionado.</string>

    <!-- Strings related to register -->
    <string name="title_register">Novo Registro</string>
    <string name="title_update">Atualizar Registro</string>
    <string name="kid_name">Nome da criança</string>
    <string name="kid_id">ID/Senha</string>
    <string name="sponsor_name">Nome do responsável</string>
    <string name="sponsor_email">Email do responsável</string>
    <string name="city">Cidade</string>
    <string name="address">Endereço</string>
    <string name="class_room">Sala</string>
    <string name="church_name">Nome da igreja</string>
    <string name="allergy">Alergia</string>
    <string name="cell_phone">Celular</string>
    <string name="boy">Menino</string>
    <string name="girl">Menina</string>
    <string name="can_leave">Pode sair? </string>
    <string name="church">Frequenta alguma igreja? </string>
    <string name="will_return">Pretende voltar? </string>
    <string name="birth_date">Data de aniversário</string>
    <string name="action_register">Registrar</string>
    <string name="action_update">Atualizar</string>
    <string name="error_field_invalid">Verifique este campo</string>
    <string name="error_field_required">Este campo é obrigatório</string>
</resources>
